tests/compile_fail/coalesce_incompatible.stderr
error[E0277]: the trait bound `Int: Compatible<drizzle::core::types::Text>` is not satisfied
  --> tests/compile_fail/coalesce_incompatible.rs:17:22
   |
17 |     let _ = coalesce(user.id, "default");
   |             -------- ^^^^^^^ the trait `Compatible<drizzle::core::types::Text>` is not implemented for `Int`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `Compatible<Rhs>`:
             `Int` implements `Compatible<Double>`
             `Int` implements `Compatible<Float>`
             `Int` implements `Compatible<drizzle::core::types::Any>`
             `Int` implements `Compatible<drizzle::core::types::BigInt>`
             `Int` implements `Compatible<drizzle::core::types::SmallInt>`
note: required by a bound in `coalesce`
  --> core/src/expr/null.rs
   |
   | pub fn coalesce<'a, V, E, D>(expr: E, default: D) -> SQLExpr<'a, V, E::SQLType, Null, Scalar>
   |        -------- required by a bound in this function
...
   |     E::SQLType: Compatible<D::SQLType>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `coalesce`
